<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_index"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_index" />

    <item
        android:id="@+id/nav_following"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/nav_following" />

    <item
        android:id="@+id/nav_post"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="@string/nav_post"/>

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/nav_message" />

    <item
        android:id="@+id/nav_me"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/nav_me" />

</menu>
